Update styles.css to fix x overflow issue

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   background: black;
   margin: 0;
   padding: 0;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 h1 {
